--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
-  <body>
-    <header></header>
+  <body class="open-sans-normal">
+    <header class="heading">
+      <nav>
+        <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+        <ul>
+          <li><a class="dark-2" href="#">Portfolio</a></li>
+          <li><a class="dark-2" href="#">Blog</a></li>
+          <li>
+            <a href="#"
+              ><button class="btn-primary" type="button">Hire Me</button></a
+            >
+          </li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h4 class="banner-short dark-2">Hi, I am</h4>
+          <h1 class="banner-big">Mary Hardy</h1>
+          <p class="bannercontent">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary" type="button">Download CV</button>
+          <button class="btn-primary" type="button">Contact Me</button>
+        </div>
+        <img class="banner-profile" src="images/hardy.png" alt="Loading" />
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
