--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body class="open-sans-normal">
-    <header class="heading">
+    <header class="heading secondary-bg">
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -40,7 +40,37 @@
         <img class="banner-profile" src="images/hardy.png" alt="Loading" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about secondary-bg">
+        <h3 class="section-title">About Me</h3>
+
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-items">
+          ,<about-item>
+            <p class="item-title">Name</p>
+            <p class="item-description">Mary Hardy</p>
+          </about-item>
+          <about-item>
+            <p class="item-title">Email</p>
+            <p class="item-description">maryhardy@gmail.com</p>
+          </about-item>
+          <about-item>
+            <p class="item-title">Date of Birth</p>
+            <p class="item-description">Aug 21 2000</p>
+          </about-item>
+          <about-item>
+            <p class="item-title">From</p>
+            <p class="item-description">Dhaka,Bangladesh</p>
+          </about-item>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
