--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </section>
       <!-- Resume section -->
       <section class="resume">
-        <h3 class="section-title">A summary of My Resume</h3>
+        <h3 class="section-title text-center">A summary of My Resume</h3>
         <div class="resume-container">
           <div class="resume-column">
             <h3 class="resume-column-title">My Education</h3>
