--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body class="open-sans-normal">
     <header class="heading secondary-bg">
       <nav>
-        <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+        <h3 class="nav-title">
+          MR.<span class="text-primary">Khondokar</span>
+        </h3>
         <ul>
           <li><a class="dark-2" href="#">Portfolio</a></li>
           <li><a class="dark-2" href="#">Blog</a></li>
@@ -29,7 +31,7 @@
       <div class="banner">
         <div class="banner-content">
           <h4 class="banner-short dark-2">Hi, I am</h4>
-          <h1 class="banner-big">Mary Hardy</h1>
+          <h1 class="banner-big">Sameeul Khondokar Jisan</h1>
           <p class="bannercontent dark-3">
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
@@ -37,7 +39,7 @@
           <button class="btn-primary" type="button">Download CV</button>
           <button class="btn-primary" type="button">Contact Me</button>
         </div>
-        <img class="banner-profile" src="images/hardy.png" alt="Loading" />
+        <img class="banner-profile" src="images/PNG.png" alt="Loading" />
       </div>
     </header>
     <main>
@@ -54,11 +56,11 @@
         <div class="about-items">
           ,<about-item>
             <p class="item-title">Name</p>
-            <p class="item-description">Mary Hardy</p>
+            <p class="item-description">Sameeul KIhondokar Jisan</p>
           </about-item>
           <about-item>
             <p class="item-title">Email</p>
-            <p class="item-description">maryhardy@gmail.com</p>
+            <p class="item-description"></p>
           </about-item>
           <about-item>
             <p class="item-title">Date of Birth</p>
@@ -80,15 +82,6 @@
           experience? Check out my online resume and project portfolio.
         </p>
         <div class="skills-container">
-          <div class="skill">
-            <img src="images/icons/js.png" alt="" />
-            <h4 class="skill-title">Vanilla JavaScript</h4>
-            <p class="skill-description">
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
-            </p>
-          </div>
           <div class="skill">
             <img src="images/icons/react.png" alt="" />
             <h4 class="skill-title">React</h4>
@@ -125,9 +118,9 @@
           <div class="resume-column">
             <h3 class="resume-column-title">My Education</h3>
             <div class="experience">
-              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h4 class="experience-title">B.Sc in Software Engineering</h4>
               <h5 class="experience-sub-title">
-                Harvard University / 2015 - 2017
+                Daffodil International University / 2015 - 2017
               </h5>
               <div class="experience-description">
                 List skill/technologies here. You can change the icon above to
@@ -138,9 +131,11 @@
             <hr />
 
             <div class="experience">
-              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h4 class="experience-title">
+                Higher Secondary School Certificate
+              </h4>
               <h5 class="experience-sub-title">
-                Harvard University / 2015 - 2017
+                Daffodil International College / 2021
               </h5>
               <div class="experience-description">
                 List skill/technologies here. You can change the icon above to
@@ -150,9 +145,9 @@
             </div>
             <hr />
             <div class="experience">
-              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h4 class="experience-title">Secondary School Certificate</h4>
               <h5 class="experience-sub-title">
-                Harvard University / 2015 - 2017
+                Agargaon Adarsha High School / 2019
               </h5>
               <div class="experience-description">
                 List skill/technologies here. You can change the icon above to
@@ -165,8 +160,8 @@
           <div class="resume-column">
             <h3 class="resume-column-title">My Experience</h3>
             <div class="experience">
-              <h4 class="experience-title">Sr. Font End Developer</h4>
-              <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+              <h4 class="experience-title">Student Ambassador</h4>
+              <h5 class="experience-sub-title">ORAIMO / 2021</h5>
               <div class="experience-description">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
@@ -175,8 +170,10 @@
             </div>
             <hr />
             <div class="experience">
-              <h4 class="experience-title">Jr. Font End Developer</h4>
-              <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+              <h4 class="experience-title">Leadership & Communication Role</h4>
+              <h5 class="experience-sub-title">
+                Career Development Center / 2023
+              </h5>
               <div class="experience-description">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
@@ -185,8 +182,8 @@
             </div>
             <hr />
             <div class="experience">
-              <h4 class="experience-title">HTML Developer</h4>
-              <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+              <h4 class="experience-title">Video Editor</h4>
+              <h5 class="experience-sub-title">Go Edu /2024-Current</h5>
               <div class="experience-description">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
